fix: update visuals, remove redundant margins, update spacings

--- a/style/zinc.scss
+++ b/style/zinc.scss
@@ -83,10 +83,6 @@ $font-family: Arial, sans-serif !default;
 
         --color-edge-marker: var(--color-3);
         --color-edge-icon: #{$zinc-50};
-        top: 8px !important;
-        bottom: 8px !important;
-        left: 8px !important;
-        right: 8px !important;
         background-color: var(--color-1);
 
     }
